mule-user-guide/v/3.5/amqp-connector-reference.adoc
=  AMQP连接器参考
:keywords: anypoint, components, elements, connectors, amqp

本文档列出并描述了AMQP连接器支持的所有配置参数以及所有AMQP端点配置元素。

== 连接器属性

AMQP连接器定义要连接的代理程序，连接时要使用的凭证以及使用此连接器的入站和出站端点使用的所有常用属性。

您可以创建连接到同一代理的多个连接器，以便具有端点可以使用的不同套通用属性。

[%header,cols="30a,70a"]
|===
| {名称{1}}说明
| `host`  |要连接的主AMQP代理主机。

*Type*：string +
*Required*：否+
*Default*：`localhost`
| `port`  |用于连接到主AMQP代理的端口。

*Type*：端口号+
*Required*：否+
*Default*：`5672`
| `fallbackAddresses`  |以逗号分隔的主机列表，列为`<host>`或`<host:port>`。如果与主代理的连接失败，则此处列出的主机是尝试连接的后备代理。有关更多信息，请参阅 link:/mule-user-guide/v/3.5/amqp-connector-examples#connection-fallback[连接后备]。

*Type*：string +
*Required*：否+
*Default*：无
| `virtualHost`  |要在AMQP代理上连接的虚拟主机。

*Type*：string +
*Required*：否+
*Default*：`/`
| `username`  |用于在AMQP代理上连接的用户名。

*Type*：string +
*Required*：否+
*Default*：`guest`
| `password`  |用于连接到AMQP代理的密码。

*Type*：string +
*Required*：否+
*Default*：`guest`
| `deliveryMode`  |发布到AMQP代理时使用的传递模式。

可能的值是：

*  `PERSISTENT`
*  `NON_PERSISTENT`

*Type*：string +
*Required*：否+
*Default*：`PERSISTENT`
| `priority`  |发布到AMQP代理时使用的优​​先级。优先级可能有`0`到`9`的值 - 默认值为`0`。

*Type*：byte +
*Required*：否+
*Default*：`0`
| `mandatory`  |如果消息无法路由到队列，告诉服务器如何作出反应。如果设置为true，则服务器将为任何不可路由的消息引发异常。如果设置为false，则服务器将自动丢弃消息。

*Type*：布尔+
*Required*：否+
*Default*：`false`
| `immediate`  |如果消息不能立即路由到队列使用者，告诉服务器如何反应。如果设置为true，则服务器将针对任何无法传递的消息引发异常。如果设置为false，服务器将对消息进行排队，但不保证它将被消耗。

*Type*：布尔+
*Required*：否+
*Default*：`false`
| `default-return-endpoint-ref`  |引用AMQP返回的消息应分派到的端点。

*Type*：string +
*Required*：否+
*Default*：无
| `ackMode`  |从AMQP代理消费时使用的确认模式。

可能的值是：

*  `AMQP_AUTO`  -  AMQP代理认为一旦交付就确认消息。
*  `MULE_AUTO`  -  Mule在处理流程时自动确认消息，如果没有遇到异常。使用异步子流或分派可能导致提前确认。
*  `MANUAL`  -  AMQP代理需要显式的消息确认。

*Type*：string +
*Required*：否+
*Default*：`AMQP_AUTO`
| `prefetchSize`  |服务器提供的最大内容量（以八位字节为单位）。 0意味着无限。

*Type*：整数+
*Required*：否+
*Default*：`0`
| `prefetchCount`  |服务器传递的最大消息数。 0意味着无限。

*Type*：整数+
*Required*：否+
*Default*：`0`
| `noLocal`  |如果设置为true，则服务器不会向发布它们的连接发送消息。

*Type*：布尔+
*Required*：否+
*Default*：`false`
| `exclusiveConsumers`  |如果连接器只应创建独占使用者，则设置为true。

*Type*：布尔+
*Required*：否+
*Default*：`false`
| `activeDeclarationsOnly`  |定义连接器是否只应执行活动交换和队列声明，或者是否应执行被动声明来强制队列或交换的存在。如果设置为`false`，并且队列或交换不存在，则AMQP连接器将引发ShutdownSignalException，一个404错误，并返回以`NOT_FOUND`开头的回复文本。

有关主动声明和被动声明的讨论，请参阅 link:http://bitingcode.blogspot.co.uk/2012/03/passive-or-active-queues.html[被动或主动队列？]

*Note:*如果AMQP连接器不存在，则不会创建队列或交换。

*Type*：布尔+
*Required*：否+
*Default*：`false`
|===

== 端点属性

如果端点属性用于入站或出站端点，则它们的解释将有所不同。例如，在入站端点上，属性`routingKey`用于队列绑定，并且在出站端点上用作基本发布参数。

[%header,cols="30a,70a"]
|===
| {名称{1}}说明
| `exchangeName`  |交换发布或绑定队列。使用`AMQP.DEFAULT.EXCHANGE`作为默认交易所。 （之前的方法，即默认交换保留空白或省略`exchangeName`仍然有效，但不推荐使用。）

*Type*：string +
*Required*：否+
*Default*：无
| `queueName`  |要使用的队列的名称。留空或省略使用新的专用专用服务器命名队列。

*Type*：string +
*Required*：否+
*Default*：无
| `routingKey`  |在绑定队列或发布消息时使用逗号分隔的路由键。

*Type*：string +
*Required*：否+
*Default*：无
| `consumerTag`  |客户端生成的使用者标签来建立上下文。

*Type*：string +
*Required*：否+
*Default*：无
| `exchangeType`  |要声明的交易类型。有关每种类型的更多信息，请参阅RabbitMQ的 link:https://www.rabbitmq.com/tutorials/amqp-concepts.html[AMQP概念]。

可能的值是：

*  `fanout`  - 将交换机收到的所有消息广播到所有绑定队列。
*  `direct`  - 消息进入特定队列。
*  `topic`  - 确定哪些队列接收消息的模式。该模式是由最多255个字符长度的点分隔的单词列表。该模式可以使用星号（＆＃x2217;）替换单个单词。散列标签（＆＃x0023;）可以替代零个或多个单词。有关更多信息，请参阅 link:https://www.rabbitmq.com/tutorials/tutorial-five-python.html[RabbitMQ主题]。
*  `headers`  - 根据消息头的属性，将消息发送到队列。

*Type*：string +
*Required*：否+
*Default*：无
| `exchangeDurable`  |已申报交易的持久性。经纪人重启后，持久的交易可以继续存在。

*Type*：布尔+
*Required*：否+
*Default*：无
| `exchangeAutoDelete`  |指定是否声明的交换应该自动删除。

*Type*：布尔+
*Required*：否+
*Default*：无
| `queueDurable`  |指定声明的队列是否持久。一个持久的队列持续存在磁盘上，并且在代理重启时仍然存在。 *Note:*路由到队列的消息不耐用。

*Type*：布尔+
*Required*：否+
*Default*：无
| `queueAutoDelete`  |指定是否声明的队列应自动删除。

*Type*：布尔+
*Required*：否+
*Default*：无
| `queueExclusive`  |指定声明的队列是否是唯一的。

*Type*：布尔+
*Required*：否+
*Default*：无
|===

